# RTGC-0.7

./: .gitignore  1.py  CMakeLists.txt  Config.hpp  EngineMinimal.cpp  EngineMinimal.hpp  Makefile  SimpleWindow.cpp  SimpleWindow.hpp  Window.cpp  basic_demo.js  build.bat  demo.js  main.c  main.cpp  main_minimal.cpp  performance_demo.js  physics_engine.js  physics_engine_c.c  physics_engine_c.h  simple_test.js  test_physics.js  vehicle_control.c  vehicle_control.h
ai/: AIController.cpp  AIController.hpp
audio/: AmbientSystem.cpp  AmbientSystem.hpp  AudioEventManager.cpp  AudioEventManager.hpp  AudioSystem.cpp  AudioSystem.hpp  FootstepSystem.cpp  FootstepSystem.hpp
camera/: ThirdPersonCamera.cpp  ThirdPersonCamera.hpp
components/: BuildingComponent.cpp  BuildingComponent.hpp  CharacterComponent.cpp  CharacterComponent.hpp  InventoryComponent.cpp  InventoryComponent.hpp  RenderableComponent.cpp  RenderableComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  VehicleComponent.cpp  VehicleComponent.hpp
core/: Config.hpp  ECSManager.cpp  ECSManager.hpp  Engine.cpp  Engine.hpp  Logger.cpp  Logger.hpp  SnapshotSystem.cpp  SnapshotSystem.hpp
cuda/: SuspensionCuda.cu  SuspensionCuda.h  TerrainCuda.cu  TerrainCuda.h  TractionCuda.cu  TractionCuda.h  WindCuda.cu  WindCuda.h
debug/: Profiler.cpp  Profiler.hpp
docs/: RTGC_MVP_PLAN.md
game/: BuildingSystem.cpp  BuildingSystem.hpp  CharacterController.cpp  CharacterController.hpp  DamageSystem.cpp  DamageSystem.hpp  GameLevel.cpp  GameLevel.hpp  InputManager.cpp  InputManager.hpp  InteractionSystem.cpp  (+17 more)
(+100 files in other folders)
